# mystmd-quickstart

./: .gitignore  01-paper.md  README.md  myst.yml  pyproject.toml
