[project]
authors = [{name = "deepthought", email = "deepthough@postech.ac.kr"}]
dependencies = []
name = "mystmd-quickstart"
requires-python = ">= 3.11"
version = "0.1.0"

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["linux-64"]

[tool.pixi.pypi-dependencies]
mystmd_quickstart = { path = ".", editable = true }

[tool.pixi.tasks]

[tool.pixi.dependencies]
mystmd = ">=1.5.1,<2"
texlive-core = ">=20230313,<20230314"
latexmk = ">=4.87,<5"
